fix movie-recommender so it works and add dls with model

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -140,6 +140,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8e59166",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/davidramsey/Documents/coding/mov_recs_all/movie_recommender1/movie-recommender/nbs'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ec69d6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model_movie_predictor_large9mil_ds_19_062.pkl\r\n",
+      "movie_9mil_03_df_from_dls.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ../models_and_dls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36261823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__init__.py           _modidx.py            movie_recommender.py\r\n",
+      "\u001b[34m__pycache__\u001b[m\u001b[m/          core.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ../movie_recommender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d779240a",
    "metadata": {},
    "outputs": [],
@@ -300,11 +359,13 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### search_movies_n_recommend\n",
        "\n",
        ">      search_movies_n_recommend (favorite_movie:str)\n",
        "\n",
-       "This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles find any titles that contain the words in the `favorite_movie` variable.\n",
+       "This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles to find any titles that contain the words in the `favorite_movie` variable.\n",
        "\n",
        "|    | **Type** | **Details** |\n",
        "| -- | -------- | ----------- |\n",
@@ -313,11 +374,13 @@
       "text/plain": [
        "---\n",
        "\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### search_movies_n_recommend\n",
        "\n",
        ">      search_movies_n_recommend (favorite_movie:str)\n",
        "\n",
-       "This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles find any titles that contain the words in the `favorite_movie` variable.\n",
+       "This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles to find any titles that contain the words in the `favorite_movie` variable.\n",
        "\n",
        "|    | **Type** | **Details** |\n",
        "| -- | -------- | ----------- |\n",
@@ -374,7 +437,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -382,7 +445,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -394,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "(<gradio.routes.App>, 'http://127.0.0.1:7860/', None)"
+       "(<gradio.routes.App>, 'http://127.0.0.1:7861/', None)"
       ]
      },
      "execution_count": null,
