organize cells and markdown

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# FastAI Movie Recommender\n",
-    "> Type in your favorite movie and the model will return a list of similar movies."
+    "> An app where you can type in your favorite movie and it will suggest 30 movies similar to i t using a collaborative filtering model trained on over 9million movie reviews."
    ]
   },
   {
@@ -21,21 +21,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e5f876c",
+   "metadata": {},
+   "source": [
+    "# Makes sure all your libraries and packages are installed and loaded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11126279",
    "metadata": {},
    "source": [
     "[Fastai](https://youtu.be/p4ZZq0736Po?t=3724) is the library we use to train, load and run our model.  NB: we already trained our model so we'll only be loading it here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48cc27a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "# !pip install -Uqq fastai "
    ]
   },
   {
@@ -131,6 +128,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e9849649",
+   "metadata": {},
+   "source": [
+    "# Load model and data loaders or movie title csv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "205580b4",
    "metadata": {},
    "source": [
@@ -140,70 +145,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e59166",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/davidramsey/Documents/coding/mov_recs_all/movie_recommender1/movie-recommender/nbs'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ec69d6e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model_movie_predictor_large9mil_ds_19_062.pkl\r\n",
-      "movie_9mil_03_df_from_dls.csv\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls ../models_and_dls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36261823",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__init__.py           _modidx.py            movie_recommender.py\r\n",
-      "\u001b[34m__pycache__\u001b[m\u001b[m/          core.py\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls ../movie_recommender"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d779240a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# titles = pd.DataFrame(dls.classes['title']).reset_index() #create df\n",
+    "# titles = pd.DataFrame(dls.classes['title']).reset_index() #create df from data loaders(dls)\n",
     "# titles = titles.rename(columns={'index':'midx',0:'title'}) # rename columns"
    ]
   },
@@ -289,6 +235,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b783dcb3",
+   "metadata": {},
+   "source": [
+    "# Functions for Model Inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "40b11ce4",
@@ -349,59 +303,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98f35e06",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "---\n",
-       "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
-       "\n",
-       "### search_movies_n_recommend\n",
-       "\n",
-       ">      search_movies_n_recommend (favorite_movie:str)\n",
-       "\n",
-       "This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles to find any titles that contain the words in the `favorite_movie` variable.\n",
-       "\n",
-       "|    | **Type** | **Details** |\n",
-       "| -- | -------- | ----------- |\n",
-       "| favorite_movie | str | The movie title typed into the `gr.Textbox()` that the user will see on the `gradio` app |"
-      ],
-      "text/plain": [
-       "---\n",
-       "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
-       "\n",
-       "### search_movies_n_recommend\n",
-       "\n",
-       ">      search_movies_n_recommend (favorite_movie:str)\n",
-       "\n",
-       "This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles to find any titles that contain the words in the `favorite_movie` variable.\n",
-       "\n",
-       "|    | **Type** | **Details** |\n",
-       "| -- | -------- | ----------- |\n",
-       "| favorite_movie | str | The movie title typed into the `gr.Textbox()` that the user will see on the `gradio` app |"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "show_doc(search_movies_n_recommend)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "0d034a83",
+   "id": "e2129795",
    "metadata": {},
    "source": [
-    "Now we use `gr.Interface()` to create an inference block to be pushed to gradio"
+    "# Gradio For Publishing the Model \n",
+    ">Now we use `gr.Interface()` to create a block that contains our `search_movies_n_recommend` fuction as well as variables that dictate what will be shown once we publish it on `gradio`"
    ]
   },
   {
@@ -414,17 +321,19 @@
     "intf = gr.Interface(fn=search_movies_n_recommend,\n",
     "                    inputs=gr.Textbox(lines=1,placeholder=\"Put Your Favorite Movie Here To See Similar Movie Recommendations...\"),\n",
     "                    outputs=[\"text\",\"text\"],\n",
-    "                    examples=['Child\\'s Play (1988)','Rushmore','brothers Bloom','call me by your name', 'Jumanji (1995)','The Three Amigos'],\n",
+    "                    examples=['Child\\'s Play (1988)','Rushmore','brothers Bloom',\n",
+    "                              'call me by your name', 'Jumanji (1995)','The Three Amigos'],\n",
     "                    title=\"Dave's Fast.AI Movie Recommender\",\n",
     "                    article='This recommender uses a collaborative filtering model fashioned from the [Fast.AI](https://github.com/fastai/fastbook/blob/master/08_collab.ipynb) library and trained on the 9 million movie reviews from the [Movie Lense Dataset](https://grouplens.org/datasets/movielens/25m/).  It trains Latent Factors to give movies and users descriptive weights that help predict thier reivews based on these factors.  The model was trained completely WITHOUT titles, descriptions, or categories and amazingly these things can be added to imporove this model.  Enjoy!'                    )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a47ce190",
+   "id": "74ecc92e",
    "metadata": {},
    "source": [
-    "Now we launch it so it can be used. here"
+    "# Actually Try the Model HERE\n",
+    ">Now we launch it so it can be used literally here in the `jupyter notebook`"
    ]
   },
   {
@@ -466,9 +375,8 @@
     }
    ],
    "source": [
-    "intf.launch(\n",
-    "    inline=True, #True publishes the page in notebook\n",
-    "    share=False) #True temporarily publishes the app on gradio website for 72 hours"
+    "intf.launch(inline=True, #when True publishes the page in notebook\n",
+    "    share=False) #when True automatcially publishes the app to the gradio website for 72 hours."
    ]
   },
   {
@@ -476,18 +384,8 @@
    "id": "5f734e78",
    "metadata": {},
    "source": [
-    "# Example: \n",
-    ">Here is an example of the model recommending movies similar to one of my favorites:  Beasts of the Southern Wild"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b3b7ac4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "favorite_movie = 'Beasts of the Southern Wild (2012)'"
+    "# Example Without Gradio: \n",
+    ">Here is an example of the model being used straight from the `get_movie_recs` function, recommending movies similar to one of my favorites."
    ]
   },
   {
@@ -537,6 +435,8 @@
     }
    ],
    "source": [
+    "favorite_movie = 'Beasts of the Southern Wild (2012)'\n",
+    "\n",
     "get_movie_recs(full_title=favorite_movie)"
    ]
   },
