error importing get_movie_recs function into the index file

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5f876c",
+   "id": "b714b6da",
    "metadata": {},
    "source": [
     "# Makes sure all your libraries and packages are installed and loaded."
@@ -110,7 +110,6 @@
     "# For modeling\n",
     "from fastai.tabular.all import *\n",
     "from fastai.collab import *\n",
-    "\n",
     "#for publishing the model\n",
     "import gradio as gr"
    ]
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9849649",
+   "id": "f54d3467",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b783dcb3",
+   "id": "7de0a930",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -250,7 +249,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_movie_recs(full_title):\n",
+    "def get_movie_recs(full_title:str, # String saved to `favorite_movie` variable\n",
+    "                   learn,# Trained Model\n",
+    "                   titles #DataFrame with all movie titles from dls\n",
+    "                        ):\n",
     "    \"This function will use the `nn.CosineSimilarity` on the 50 latent factors for each movie to find the 30 movies most similar to your favorite movie.\"\n",
     "    movie_factors = learn.model.i_weight.weight\n",
     "    idx = int(titles[titles.title == full_title].midx)\n",
@@ -262,12 +264,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7063f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L7){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### get_movie_recs\n",
+       "\n",
+       ">      get_movie_recs (full_title:str, learn, titles)\n",
+       "\n",
+       "This function will use the `nn.CosineSimilarity` on the 50 latent factors for each movie to find the 30 movies most similar to your favorite movie.\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| full_title | str | String saved to `favorite_movie` variable |\n",
+       "| learn |  | Trained Model |\n",
+       "| titles |  | DataFrame with all movie titles from dls |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L7){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### get_movie_recs\n",
+       "\n",
+       ">      get_movie_recs (full_title:str, learn, titles)\n",
+       "\n",
+       "This function will use the `nn.CosineSimilarity` on the 50 latent factors for each movie to find the 30 movies most similar to your favorite movie.\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| full_title | str | String saved to `favorite_movie` variable |\n",
+       "| learn |  | Trained Model |\n",
+       "| titles |  | DataFrame with all movie titles from dls |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_doc(get_movie_recs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d31b97e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def search_movies_n_recommend(favorite_movie:str # The movie title typed into the `gr.Textbox()` that the user will see on the `gradio` app\n",
+    "def search_movies_n_recommend(favorite_movie:str, # The movie title typed into the `gr.Textbox()` that the user will see on the `gradio` app\n",
+    "                             learn, # Trained model\n",
+    "                              titles, # Movie titles df\n",
     "                             ):\n",
     "    \"This function returns 30 recommendations using `get_movie_recs` after searching through all movie titles to find any titles that contain the words in the `favorite_movie` variable.\"\n",
     "    movies_found = ''\n",
@@ -292,7 +348,7 @@
     "    output_str =  movies_found+'\\n\\n'+explainer\n",
     "    \n",
     "    #get recommendations from model\n",
-    "    recommendations = get_movie_recs(full_title) \n",
+    "    recommendations = get_movie_recs(full_title, learn,titles) \n",
     "    #create list of all the recommendations to print\n",
     "    print_lst = ''\n",
     "    for o in recommendations:    print_lst =print_lst+str(o) + '\\n'\n",
@@ -304,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2129795",
+   "id": "cac7e283",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -329,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ecc92e",
+   "id": "3d6be366",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
@@ -376,7 +432,7 @@
    ],
    "source": [
     "intf.launch(inline=True, #when True publishes the page in notebook\n",
-    "    share=False) #when True automatcially publishes the app to the gradio website for 72 hours."
+    "    share=False) #when True automatically publishes the app to the gradio website for 72 hours."
    ]
   },
   {
@@ -437,7 +493,7 @@
    "source": [
     "favorite_movie = 'Beasts of the Southern Wild (2012)'\n",
     "\n",
-    "get_movie_recs(full_title=favorite_movie)"
+    "get_movie_recs(full_title=favorite_movie, learn=learn, titles=titles)"
    ]
   },
   {
