fixed movie_rec .ipynb

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -5,7 +5,7 @@
    "id": "43ba360b",
    "metadata": {},
    "source": [
-    "# FastAI Movie Recommender\n",
+    "# FastAI Movie Recommender Step-by-Step\n",
     "> An app where you can type in your favorite movie and it will suggest 30 movies similar to i t using a collaborative filtering model trained on over 9million movie reviews."
    ]
   },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba6f8520",
+   "id": "3b5b902e",
    "metadata": {},
    "source": [
     "# Makes sure all your libraries and packages are installed and loaded."
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f6403ca",
+   "id": "f117bc8f",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41824174",
+   "id": "1e87fc5d",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ec16ce",
+   "id": "3f58cefd",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39a2b4a",
+   "id": "ac1d28c7",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97fd3c6d",
+   "id": "25f68445",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
@@ -402,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on local URL:  http://127.0.0.1:7862\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -422,7 +422,7 @@
     {
      "data": {
       "text/plain": [
-       "(<gradio.routes.App>, 'http://127.0.0.1:7861/', None)"
+       "(<gradio.routes.App>, 'http://127.0.0.1:7862/', None)"
       ]
      },
      "execution_count": null,
