just add the mov_rec ipynb

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5b902e",
+   "id": "bdccc217",
    "metadata": {},
    "source": [
     "# Makes sure all your libraries and packages are installed and loaded."
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f117bc8f",
+   "id": "1a77a870",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e87fc5d",
+   "id": "c5edc5aa",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f58cefd",
+   "id": "cca564a8",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1d28c7",
+   "id": "97217eaa",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25f68445",
+   "id": "2d3fbd4a",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
@@ -501,7 +501,28 @@
    "execution_count": null,
    "id": "8bf92c4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/gradio/routes.py\", line 276, in run_predict\n",
+      "    fn_index, raw_input, username, session_state, iterators\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/gradio/blocks.py\", line 760, in process_api\n",
+      "    result = await self.call_function(fn_index, inputs, iterator)\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/gradio/blocks.py\", line 672, in call_function\n",
+      "    block_fn.fn, *processed_input, limiter=self.limiter\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/anyio/to_thread.py\", line 29, in run_sync\n",
+      "    limiter=limiter)\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/anyio/_backends/_asyncio.py\", line 818, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/anyio/_backends/_asyncio.py\", line 754, in run\n",
+      "    result = context.run(func, *args)\n",
+      "TypeError: search_movies_n_recommend() missing 2 required positional arguments: 'learn' and 'titles'\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
